# all_for_sale

./: .env.sample  .gitignore  README.md  category_fixture.json  groups_fixture.json  product_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: article_confirm_delete.html  article_detail.html  article_edit.html  blog.html
catalog/: admin.py  constants.py  context_processors.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_remove_contact_telegram_remove_contact_vk.py  0004_alter_product_options.py  0005_product_is_published.py  0006_alter_product_is_published.py  0007_alter_product_is_published.py  0008_product_owner.py
catalog/templates/: base.html  category.html  contacts.html  footer.html  header.html  home.html  product.html  product_confirm_delete.html  product_create.html  product_detail.html  product_edit.html  user_add_product.html
config/: settings.py  urls.py
static/css/: bootstrap.min.css  style.css
users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_avatar.py  0003_alter_customuser_managers.py
users/templates/: edit.html  login.html  profile.html  register.html
